# eeg-emulator

./: .gitignore  404.html  LICENSE.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test.py
ads1299_driver/python/: index.html
docs/: eeg_acquisition.md  eeg_emulation.md  license.md
docs/ads1299_driver/: python.md
eeg_acquisition/: ADS1299driver.py  index.html
eeg_acquisition/design_files/: eeg_acq.kicad_pcb  eeg_acq.kicad_prl  eeg_acq.kicad_pro  eeg_acq.kicad_sch  ~eeg_acq.kicad_sch.lck
eeg_acquisition/design_files/3d-files/: ADS1299-6PAG.step  ADS1299-6PAG.wrl  XG4C-1631.step  XG4C-1631.wrl
eeg_acquisition/design_files/bom/: ibom.html
eeg_acquisition/design_files/libraries/: SamacSys_Parts.dcm  SamacSys_Parts.lib  SamacSys_Parts.mod
eeg_acquisition/micro/src/: ADS1299.cpp  ADS1299.h  ADS1299Manager.cpp  ADS1299Manager.h  Commands.h  main.cpp
eeg_emulation/: daq.py  index.html
eeg_emulation/design_files/: 2chan_hold.kicad_sch  design-block-lib-table  eeg_demux.kicad_pcb  eeg_demux.kicad_prl  eeg_demux.kicad_pro  eeg_demux.kicad_sch  fp-lib-table  sym-lib-table  vdiv.kicad_sch
eeg_emulation/design_files/3d-models/: 74HC1G04GV,125.STEP  ADG719BRTZ-REEL.wrl  TL082ID.step  TL082ID.wrl
eeg_emulation/design_files/libraries/: SamacSys_Parts.dcm  SamacSys_Parts.lib  SamacSys_Parts.mod
license/: index.html
search/: search_index.json
site/: index.html  objects.inv
site/ads1299_driver/python/: index.html
site/eeg_acquisition/: index.html
site/eeg_emulation/: index.html
